# cognicore-my-openenv

./: .env.example  .gitignore  .vercelignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROGRESS.md  README.md  baseline.py  client.py  cognicore_memory.db  dashboard.html  dataset.py  demo.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_llm.py  test_local.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: auto-issue.yml  auto-label.yml  autofixer.yml  ci.yml  codeguardian.yml  healthbot.yml  idea-to-issue.yml  ideabot.yml  release.yml  securitybot.yml  stale.yml  testbot.yml  welcome.yml
api/: app.py  index.py
benchmarks/: leaderboard.py  run_benchmarks.py
cognicore/: __init__.py  advanced_memory.py  adversarial.py  agent_builder.py  analytics.py  augmentation.py  auto_improve.py  benchmark.py  cache.py  causal.py  cli.py  compose.py  cost_tracker.py  curriculum.py  dashboard.py  debugger.py  difficulty.py  evolution.py  experiment.py  explainer.py  finetuning.py  fingerprint.py  intelligence.py  knowledge_transfer.py  leaderboard.py  lifelong.py  memory_manager.py  meta_rewards.py  multi_agent.py  multi_memory.py  persistence.py  predictive.py  profiles.py  prompt_optimizer.py  rate_limiter.py  red_blue.py  replay.py  report.py  runtime.py  safety_layer.py  (+5 more)
cognicore/adapters/: __init__.py  gymnasium.py
cognicore/agents/: __init__.py  base_agent.py  (+3 more)
configs/: default.yaml  strict_safety.yaml
demo/: app.js  cognitive_demo.html  dashboard.html  demo.html  index.html  record_demo.py  server.py  show_real_envs.py  style.css
docs/: bench.css  bench.js  benchmark.html  engine.js  index.html  style.css  suite.css  suite.html  suite.js
env/: __init__.py  dataset.py  environment.py  models.py
examples/: benchmark_ml_agents.py  chatbot_safety_eval.py  check_modules.py  classifier_agent.py  coderepair_bench.py  coderepair_llm.py  coderepair_v2.py  cognition_proof.py  compare_agents.py  custom_env.py  developer_guide.py  full_test.py  gemini_agent.py  gemini_full_test.py  human_agent.py  llm_agent.py  mega_demo.py  quickstart.py  reddit_demo.py  reward_demo.py  rl_agent.py  rl_training_demo.py  rule_based_agent.py  run_realbench.py  test_all_agents.py  test_company_models.py  test_runtime.py  train_cognitive_agent.py  train_sb3.py  verify_phases.py  world_demo.py  wow_experiment.py
public/: index.html
scripts/: fix_prints.py
server/: __init__.py  app.py  environment.py
tests/: test_advanced_features.py  test_advanced_memory.py  test_adversarial.py  test_agent.py  test_agent_builder.py  test_analytics.py  test_api.py  test_app.py  test_augmentation.py  test_auto_improve.py  test_base_agent.py  test_base_env.py  test_code_env.py  test_conversation_env.py  test_environment.py  test_gymnasium_adapter.py  test_healthbot_workflow.py  test_industry_fixes.py  test_math_env.py  test_memory.py  test_new_features.py  test_planning_env.py  test_platform_features.py  test_premium_features.py  test_propose_revise.py  test_registry.py  test_research_features.py  test_rewards.py  test_roadmap_features.py  test_safety_env.py  test_server.py  test_summarization_env.py
(+83 files in other folders)
