[project]
name = "cognicore-openenv"
description = "CogniCore AI Safety Monitor - classify AI responses as SAFE, UNSAFE, or NEEDS_REVIEW"
version = "1.0.0"
dependencies = [
    "requests>=2.28.0",
    "fastapi==0.110.0",
    "uvicorn==0.27.0",
    "pydantic==2.6.0",
    "openai>=1.0.0",
    "numpy>=1.21.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "openenv-core>=0.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
server = "server.app:main"
